# etl-r-generator

./: ENGINEERING_LOG.md  README.md  cli.py  file_final_output.csv  hello_optimized.yaml  hello_world.R  pyproject.toml  requirements.txt  source_raw_data.csv
src/etl_r_generator/: builder._py  builder.py  transpiler.py
src/generator/: builder.py
tests/integration/: test_end_to_end.py  test_generator_flow.py
tests/unit/: test_batch_compute.py  test_filename_handling.py  test_generator_aggregate.py  test_io.py  test_structural_ops.py  test_structure.py  test_transpiler.py
